[gd_scene load_steps=3 format=3 uid="uid://6s5aaewix1mt"]

[ext_resource type="Script" uid="uid://do3ttcqsv0ari" path="res://script/shotgun.gd" id="1_v3i1e"]
[ext_resource type="Texture2D" uid="uid://lkw30046oms2" path="res://src/img/attibute/Senjata/weaponR3.png" id="2_yha0r"]

[node name="shotgun" type="Node2D"]
scale = Vector2(0.05, 0.05)
script = ExtResource("1_v3i1e")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_yha0r")

[node name="Marker2D1" type="Marker2D" parent="Sprite2D"]
position = Vector2(635, -48)

[node name="Marker2D2" type="Marker2D" parent="Sprite2D"]
position = Vector2(655, -22)

[node name="Marker2D3" type="Marker2D" parent="Sprite2D"]
position = Vector2(667, 0)

[node name="Marker2D4" type="Marker2D" parent="Sprite2D"]
position = Vector2(655, 22)

[node name="Marker2D5" type="Marker2D" parent="Sprite2D"]
position = Vector2(635, 48)

[node name="posisiSenjata" type="Marker2D" parent="Sprite2D"]
position = Vector2(588, 0)
